--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/x-icon" href="assets/alchemy-favicon.png" />
 
     <!-- js -->
+    <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.35.7/dist/umd/supabase.min.js"></script>
     <script type="module" src="app.js"></script>
 
     <!-- fonts -->
@@ -32,6 +33,9 @@
 
     <main>
         <div id="stock-list">Stock Market</div>
+        <div id="animal-list">Animals</div>
+        <div id="avatar-list">Avatar</div>
+        <div id="company-list">Company</div>
     </main>
 
 </body>
