created render fetch and event listener for last table

--- a/index.html
+++ b/index.html
@@ -32,10 +32,18 @@
     </header>
 
     <main>
-        <div id="stock-list">Stock Market</div>
-        <div id="animal-list">Animals</div>
-        <div id="avatar-list">Avatar</div>
-        <div id="company-list">Company</div>
+        <section>
+            <div id="stock-list">Stock Market</div>
+        </section>
+        <section>
+            <div id="animal-list">Animals</div>
+        </section>
+        <section>
+            <div id="avatar-list">Avatar</div>
+        </section>
+        <section>
+            <div id="company-list">Company</div>
+        </section>
     </main>
 
 </body>
