--- a/index.html
+++ b/index.html
@@ -33,16 +33,24 @@
 
     <main>
         <section>
-            <div id="stock-list">Stock Market</div>
+            <div id="stock-list">
+                <h1 class="header">Stock Market
+            </div>
         </section>
         <section>
-            <div id="animal-list">Animals</div>
+            <div id="animal-list">
+                <h1 class="header">Animals</h1>
+            </div>
         </section>
         <section>
-            <div id="avatar-list">Avatar</div>
+            <div id="avatar-list">
+                <h1 class="header">Avatar</h1>
+            </div>
         </section>
         <section>
-            <div id="company-list">Company</div>
+            <div id="company-list">
+                <h1 class="header">Company</h1>
+            </div>
         </section>
     </main>
 
