had error in supabase key which was preventing it from working but fixed it.

--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
     </header>
 
     <main>
-        <section>
-            <div id="stock-list">
-                <h1 class="header">Stock Market
-            </div>
-        </section>
-        <section>
-            <div id="animal-list">
-                <h1 class="header">Animals</h1>
-            </div>
-        </section>
-        <section>
-            <div id="avatar-list">
-                <h1 class="header">Avatar</h1>
-            </div>
-        </section>
-        <section>
-            <div id="company-list">
-                <h1 class="header">Company</h1>
-            </div>
-        </section>
+        <!-- <section> -->
+        <div id="stock-list">
+            <h1 class="header">Stock Market
+        </div>
+        <!-- </section> -->
+        <!-- <section> -->
+        <div id="animal-list">
+            <h1 class="header">Animals</h1>
+        </div>
+        <!-- </section> -->
+        <!-- <section> -->
+        <div id="avatar-list">
+            <h1 class="header">Avatar</h1>
+        </div>
+        <!-- </section> -->
+        <!-- <section> -->
+        <div id="company-list">
+            <h1 class="header">Company</h1>
+        </div>
+        <!-- </section> -->
     </main>
 
 </body>
