messing with css and styling

--- a/index.html
+++ b/index.html
@@ -25,33 +25,44 @@
 
 </head>
 
-<body>
+<body class="align">
     <header>
-        <img class="logo" src="assets/html_css_js.png" alt="logo">
-        <h1>Web App</h1>
+        <h1>You got that supabase</h1>
+        <audio controls autoplay>
+            <source src="./assets/Nicki_Minaj_-_Super_Bass.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+        </audio>
     </header>
 
     <main>
-        <!-- <section> -->
-        <div id="stock-list">
-            <h1 class="header">Stock Market
-        </div>
-        <!-- </section> -->
-        <!-- <section> -->
-        <div id="animal-list">
-            <h1 class="header">Animals</h1>
-        </div>
-        <!-- </section> -->
-        <!-- <section> -->
-        <div id="avatar-list">
-            <h1 class="header">Avatar</h1>
-        </div>
-        <!-- </section> -->
-        <!-- <section> -->
-        <div id="company-list">
-            <h1 class="header">Company</h1>
-        </div>
-        <!-- </section> -->
+        <section>
+            <div id="stock-section">
+                <span class="header">Random Stock Market Things</span>
+            </div>
+            <div id="stock-list">
+            </div>
+        </section>
+        <section>
+            <div id="animal-section"> <span class="header">Animals are cool</span>
+                <h3>Learn really cool things about animals below</h3>
+            </div>
+            <div id="animal-list">
+            </div>
+        </section>
+        <section>
+            <div id="avatar-section">
+                <span class="header">Avatar friend Set Up</span>
+            </div>
+            <div id="avatar-list">
+            </div>
+        </section>
+        <section>
+            <div id="company-section">
+                <span class="header">Terrible Companies</span>
+            </div>
+            <div id="company-list">
+            </div>
+        </section>
     </main>
 
 </body>
