--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
 <body class="align">
     <header>
-        <h1>You got that supabase</h1>
+        <h1>You got that supabase
+        </h1>
         <audio controls autoplay>
             <source src="./assets/Nicki_Minaj_-_Super_Bass.mp3" type="audio/mp3">
             Your browser does not support the audio element.
@@ -37,28 +38,33 @@
     <main>
         <section>
             <div id="stock-section">
-                <span class="header">Random Stock Market Things</span>
+                <span class="header">The Stock Market
+                </span>
             </div>
             <div id="stock-list">
             </div>
         </section>
         <section>
-            <div id="animal-section"> <span class="header">Animals are cool</span>
-                <h3>Learn really cool things about animals below</h3>
+            <div id="animal-section"> <span class="header">Animals !!
+
+                </span>
+
             </div>
             <div id="animal-list">
             </div>
         </section>
         <section>
             <div id="avatar-section">
-                <span class="header">Avatar friend Set Up</span>
+                <span class="header">Rent A Friend</span>
             </div>
             <div id="avatar-list">
             </div>
         </section>
         <section>
             <div id="company-section">
-                <span class="header">Terrible Companies</span>
+                <span class="header">Capitalism
+
+                </span>
             </div>
             <div id="company-list">
             </div>
